--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.brijframework</groupId>
+		<artifactId>point-of-sale-api</artifactId>
+		<version>1.1</version>
+		<relativePath />
 	</parent>
-	<groupId>com.brijframework</groupId>
-	<artifactId>project-brijframework-cloudserver</artifactId>
-	<version>0.0.1</version>
-	<name>project-brijframework-cloudserver</name>
-	<description>Demo project for Spring Boot</description>
+	<artifactId>point-of-sale-server</artifactId>
+	<name>point-of-sale-server</name>
+	<description>point-of-sale-server</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
