--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,13 @@
+# HTTP (Tomcat) port
+server:
+  port: 1111  
 # Configure this Discovery Server
 eureka:
   instance:
     hostname: localhost
+    preferIpAddress: true
   client: #Not a client
     registerWithEureka: false
     fetchRegistry: false
-
-# HTTP (Tomcat) port
-server:
-  port: 1111  
+    serviceUrl:
+      defaultZone: http://localhost:${server.port}/eureka/
