--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.brijframework</groupId>
-		<artifactId>point-of-sale-api</artifactId>
+		<artifactId>unlimits-api</artifactId>
 		<version>1.1</version>
 		<relativePath />
 	</parent>
-	<artifactId>point-of-sale-server</artifactId>
-	<name>point-of-sale-server</name>
-	<description>point-of-sale-server</description>
+	<artifactId>unlimits-server</artifactId>
+	<name>unlimits-server</name>
+	<description>unlimits-server</description>
 	<packaging>jar</packaging>
 	<properties>
-		<java.version>1.8</java.version>
-		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+		<java.version>17</java.version>
+		<org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<spring-cloud.version>2023.0.1</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -101,9 +101,19 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<!-- or newer version -->
+				<configuration>
+					<source>${maven.compiler.source}</source> <!-- depending on your project -->
+					<target>${maven.compiler.target}</target> <!-- depending on your project -->
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
